--- a/public/css/fronten.css
+++ b/public/css/fronten.css
@@ -1,3 +1,4 @@
+/* Navbar*/
 .navbar-brand {
   width: 100px;
   height: 100px;
@@ -5,14 +6,19 @@
   margin-left: 40px;
 }
 
-.navbar .navbars1 .nvbr{
+#navbar .navbar .navbars1 .nvbr{
   display: flex;
+}
+
+.nav-link:hover{
+font-size: 1.5rem;
 }
 
 .form-control {
   height: 30px;
   display: flex;
 }
+
 
 /*explanation*/
 .explanation {
@@ -47,12 +53,6 @@
   z-index: 3;
 }
 
-
-.explanation .story{
-    margin-top: 30px;
-    color: #ffffff;
-}
-
 .explanation .support {
     margin-top: 30px;
     font-size: 16px;
@@ -61,13 +61,14 @@
     line-height: 30px;
 }
 
+
+/* Daftar Tempat */
+
 .btn-secondary {
     background: #f5efff;
     color: #7839f3;
 }
 
-
-/* Daftar Tempat */
 .recent-blog-posts .post-item {
     background: var(--surface-color);
     box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
@@ -141,6 +142,10 @@
     transform: scale(1.1);
   }
 
+.form-label{
+  color: #fff;
+}
+
   
   .footer {
     padding: 7em 0; }
@@ -148,42 +153,56 @@
   .footer-10 {
     background: #242525;
     padding: 0 0 4em 0; }
+
     .footer-10 .border-top, .footer-10 .border-bottom {
       border-color: rgba(255, 255, 255, 0.1) !important; }
+
     .footer-10 .footer-heading {
       font-size: 18px;
       color: #fff;
       margin-bottom: 30px; }
+      
     .footer-10 p {
       color: rgba(255, 255, 255, 0.3); }
+
     .footer-10 a {
       color: #1089ff; }
+
     .footer-10 .con.con-1 {
       background: #1e1e1e; }
+
     .footer-10 .con.con-2 {
       background: #1c1c1c; }
+
     .footer-10 .con.con-3 {
-      background: #252525; }
+      background: #1e1e1e; }
+
     .footer-10 .list-unstyled li a {
       color: rgba(255, 255, 255, 0.2); }
+
       .footer-10 .list-unstyled li a:hover {
         color: #fff; }
+
     .footer-10 .con-info .icon {
       width: 50px;
       height: 50px;
-      background: #1089ff;
+      background: #252525;
       border-radius: 50%;
       margin: 0 auto;
       margin-bottom: 10px; }
+
       .footer-10 .con-info .icon span {
         color: #fff;
         font-size: 24px; }
+
     .footer-10 .con-info span {
       color: rgba(255, 255, 255, 0.8); }
+
     .footer-10 .subscribe-form .form-group {
       position: relative;
       margin-bottom: 0;
       border-radius: 0; }
+
       .footer-10 .subscribe-form .form-group input {
         background: white !important;
         border: none !important;
@@ -191,22 +210,28 @@
         color: rgba(0, 0, 0, 0.3) !important;
         font-size: 16px;
         border-radius: 0; }
+
         .footer-10 .subscribe-form .form-group input::-webkit-input-placeholder {
           /* Chrome/Opera/Safari */
-          color: rgba(0, 0, 0, 0.3) !important; }
+          color: rgba(0, 0, 0, 0.3) !important; 
+        }
         .footer-10 .subscribe-form .form-group input::-moz-placeholder {
           /* Firefox 19+ */
-          color: rgba(0, 0, 0, 0.3) !important; }
+          color: rgba(0, 0, 0, 0.3) !important; 
+        }
         .footer-10 .subscribe-form .form-group input:-ms-input-placeholder {
           /* IE 10+ */
-          color: rgba(0, 0, 0, 0.3) !important; }
+          color: rgba(0, 0, 0, 0.3) !important; 
+        }
         .footer-10 .subscribe-form .form-group input:-moz-placeholder {
           /* Firefox 18- */
-          color: rgba(0, 0, 0, 0.3) !important; }
+          color: rgba(0, 0, 0, 0.3) !important; 
+        }
         .footer-10 .subscribe-form .form-group input:focus {
           outline: none !important;
           -webkit-box-shadow: none;
-          box-shadow: none; }
+          box-shadow: none; 
+        }
       .footer-10 .subscribe-form .form-group .submit {
         color: #fff !important;
         display: block;
@@ -215,15 +240,19 @@
         font-size: 16px;
         background: #1089ff !important;
         border: none;
-        border-radius: 0; }
+        border-radius: 0; 
+      }
         .footer-10 .subscribe-form .form-group .submit:hover, .footer-10 .subscribe-form .form-group .submit:focus {
           text-decoration: none !important;
-          outline: none !important; }
+          outline: none !important; 
+        }
     .footer-10 .subscribe-form .subheading {
       display: inline-block;
       margin-top: 5px;
       color: rgba(255, 255, 255, 0.3);
-      font-size: 13px; }
+      font-size: 13px; 
+    }
     .footer-10 .ftco-footer-social li a {
       background: rgba(255, 255, 255, 0.1);
-      color: #fff; }
+      color: #fff; 
+    }
