--- a/public/css/fronten.css
+++ b/public/css/fronten.css
@@ -1,32 +1,54 @@
+* {
+  box-sizing: border-box;
+}
+
+
+.body .main{
+  overflow-x: hidden;
+}
+
 /* Navbar*/
 .navbar-brand {
   width: 100px;
   height: 100px;
   display: flex;
-  margin-left: 40px;
+  margin-left: 50px;
 }
 
 #navbar .navbar .navbars1 .nvbr{
   display: flex;
 }
 
+.navbar{
+  background-color: #2a2727;
+  box-shadow: 2px #141416;
+  height: 80px;
+}
+
 .nav-link:hover{
 font-size: 1.5rem;
 }
 
-.form-control {
-  height: 30px;
-  display: flex;
+.container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+  overflow-x: hidden;
+}
+
+
+.input-group {
+  width: 200px;
+  height: 25px;
 }
 
 
 /*explanation*/
 .explanation {
-  padding: 40px 0;
+  padding: 80px 0;
   position: relative;
   clip-path: inset(0);
   margin-top: -2px;
-  margin-bottom: 50px;
+  
 }
 
 .explanation img {
@@ -35,7 +57,7 @@ font-size: 1.5rem;
   left: 0;
   display: block;
   width: 100%;
-  height:800px;
+  height: 100%;
   object-fit: cover;
   z-index: 1;
 }
@@ -61,8 +83,66 @@ font-size: 1.5rem;
     line-height: 30px;
 }
 
+/* Start Features */
+.features .container h2{
+  margin-top: auto;
+}
+
+.features {
+  background-color: #f4f4f4;
+  height: 700px;
+}
+
+.features .row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px; /* Tambahkan jarak antar elemen */
+}
+
+.features .feat {
+  flex: 1 1 22.75%; /* Pastikan setiap fitur memiliki lebar yang sama */
+  margin-top: 50px;
+  padding: 30px 40px;
+  background-color: #fff;
+  box-shadow: 0 0 15px #ccc;
+  max-width: 300px; /* Batasan maksimal untuk fitur */
+}
+
+.features .feat i {
+  color: #a2cf8d;
+}
+
+.features .feat h3 {
+  font-size: 17px;
+}
+
+.features .feat p {
+  color: #666;
+}
+
+.features .feat:hover,
+.features .feat:nth-of-type(0) {
+  background-color: #a2cf8d;
+}
+
+.features .feat:hover i,
+.features .feat:nth-of-type(3) i,
+.features .feat:hover h3,
+.features .feat:nth-of-type(0) h3,
+.features .feat:hover p,
+.features .feat:nth-of-type(0) p {
+  color: #fff;
+}
+/* End Features */
+
 
 /* Daftar Tempat */
+
+.cm{
+  margin-top: 100px;
+  display: flex;
+}
 
 .btn-secondary {
     background: #f5efff;
@@ -141,118 +221,175 @@ font-size: 1.5rem;
   .recent-blog-posts .post-item:hover .post-img img {
     transform: scale(1.1);
   }
+/* end */
 
+/* */
 .form-label{
   color: #fff;
 }
 
-  
-  .footer {
-    padding: 7em 0; }
-  
-  .footer-10 {
-    background: #242525;
-    padding: 0 0 4em 0; }
-
-    .footer-10 .border-top, .footer-10 .border-bottom {
-      border-color: rgba(255, 255, 255, 0.1) !important; }
-
-    .footer-10 .footer-heading {
-      font-size: 18px;
-      color: #fff;
-      margin-bottom: 30px; }
-      
-    .footer-10 p {
-      color: rgba(255, 255, 255, 0.3); }
-
-    .footer-10 a {
-      color: #1089ff; }
-
-    .footer-10 .con.con-1 {
-      background: #1e1e1e; }
-
-    .footer-10 .con.con-2 {
-      background: #1c1c1c; }
-
-    .footer-10 .con.con-3 {
-      background: #1e1e1e; }
-
-    .footer-10 .list-unstyled li a {
-      color: rgba(255, 255, 255, 0.2); }
-
-      .footer-10 .list-unstyled li a:hover {
-        color: #fff; }
-
-    .footer-10 .con-info .icon {
-      width: 50px;
-      height: 50px;
-      background: #252525;
-      border-radius: 50%;
-      margin: 0 auto;
-      margin-bottom: 10px; }
-
-      .footer-10 .con-info .icon span {
-        color: #fff;
-        font-size: 24px; }
-
-    .footer-10 .con-info span {
-      color: rgba(255, 255, 255, 0.8); }
-
-    .footer-10 .subscribe-form .form-group {
-      position: relative;
-      margin-bottom: 0;
-      border-radius: 0; }
-
-      .footer-10 .subscribe-form .form-group input {
-        background: white !important;
-        border: none !important;
-        outline: none !important;
-        color: rgba(0, 0, 0, 0.3) !important;
-        font-size: 16px;
-        border-radius: 0; }
-
-        .footer-10 .subscribe-form .form-group input::-webkit-input-placeholder {
-          /* Chrome/Opera/Safari */
-          color: rgba(0, 0, 0, 0.3) !important; 
-        }
-        .footer-10 .subscribe-form .form-group input::-moz-placeholder {
-          /* Firefox 19+ */
-          color: rgba(0, 0, 0, 0.3) !important; 
-        }
-        .footer-10 .subscribe-form .form-group input:-ms-input-placeholder {
-          /* IE 10+ */
-          color: rgba(0, 0, 0, 0.3) !important; 
-        }
-        .footer-10 .subscribe-form .form-group input:-moz-placeholder {
-          /* Firefox 18- */
-          color: rgba(0, 0, 0, 0.3) !important; 
-        }
-        .footer-10 .subscribe-form .form-group input:focus {
-          outline: none !important;
-          -webkit-box-shadow: none;
-          box-shadow: none; 
-        }
-      .footer-10 .subscribe-form .form-group .submit {
-        color: #fff !important;
-        display: block;
-        width: 130px;
-        height: 52px;
-        font-size: 16px;
-        background: #1089ff !important;
-        border: none;
-        border-radius: 0; 
-      }
-        .footer-10 .subscribe-form .form-group .submit:hover, .footer-10 .subscribe-form .form-group .submit:focus {
-          text-decoration: none !important;
-          outline: none !important; 
-        }
-    .footer-10 .subscribe-form .subheading {
-      display: inline-block;
-      margin-top: 5px;
-      color: rgba(255, 255, 255, 0.3);
-      font-size: 13px; 
-    }
-    .footer-10 .ftco-footer-social li a {
-      background: rgba(255, 255, 255, 0.1);
-      color: #fff; 
-    }
+/*Footer */
+.site-footer
+{
+  background-color:#26272b;
+  padding:45px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color:#f4f4f4;
+  margin-top: 100px;
+}
+.site-footer hr
+{
+  border-top-color:#bbb;
+  opacity:0.5
+}
+.site-footer hr.small
+{
+  margin:20px 0
+}
+.site-footer h6
+{
+  color:#FFF5CD;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
+}
+.site-footer a
+{
+  color:#f4f4f4;
+}
+.site-footer a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links
+{
+  padding-left:0;
+  list-style:none
+}
+.footer-links li
+{
+  display:block
+}
+.footer-links a
+{
+  color:#fff;
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links.inline li
+{
+  display:inline-block
+}
+.site-footer .social-icons
+{
+  text-align:right
+}
+.site-footer .social-icons a
+{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+  background-color:#33353d
+}
+.copyright-text
+{
+  margin:0
+}
+@media (max-width:991px)
+{
+  .site-footer [class^=col-]
+  {
+    margin-bottom:30px
+  }
+}
+@media (max-width:767px)
+{
+  .site-footer
+  {
+    padding-bottom:0
+  }
+  .site-footer .copyright-text,.site-footer .social-icons
+  {
+    text-align:center
+  }
+}
+.social-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li
+{
+  display:inline-block;
+  margin-bottom:4px
+}
+.social-icons li.title
+{
+  margin-right:15px;
+  text-transform:uppercase;
+  color:#96a2b2;
+  font-weight:700;
+  font-size:13px
+}
+.social-icons a{
+  background-color:#eceeef;
+  color:#818a91;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear
+}
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover
+{
+  color:#fff;
+  background-color:#29aafe
+}
+.social-icons.size-sm a
+{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px
+}
+.social-icons a.facebook:hover
+{
+  background-color:#3b5998
+}
+.social-icons a.twitter:hover
+{
+  background-color:#00aced
+}
+.social-icons a.linkedin:hover
+{
+  background-color:#007bb6
+}
+.social-icons a.dribbble:hover
+{
+  background-color:#ea4c89
+}
+@media (max-width:767px)
+{
+  .social-icons li.title
+  {
+    display:block;
+    margin-right:0;
+    font-weight:600
+  }
+}
