--- a/public/css/fronten.css
+++ b/public/css/fronten.css
@@ -1,53 +1,342 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 
 .body .main{
   overflow-x: hidden;
-}
-
-/* Navbar*/
-.navbar-brand {
-  width: 100px;
-  height: 100px;
-  display: flex;
-  margin-left: 50px;
-}
-
-#navbar .navbar .navbars1 .nvbr{
-  display: flex;
-}
-
-.navbar{
-  background-color: #2a2727;
-  box-shadow: 2px #141416;
-  height: 80px;
-}
-
-.nav-link:hover{
-font-size: 1.5rem;
-}
-
-.container-fluid {
-  padding-left: 0;
-  padding-right: 0;
-  overflow-x: hidden;
+  font-family: "Poppins", sans-serif;
 }
 
 
-.input-group {
-  width: 200px;
-  height: 25px;
+/* GOOGLE Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/* */
+
+.header {
+  --background-color: rgba(0, 0, 0, 0.8);
+  --heading-color: #ffffff;
+  --contrast-color: #ffffff;
+  color: var(--default-color);
+  background-color: var(--background-color);
+  padding: 10px 0;
+  transition: all 0.5s;
+  z-index: 997;
+}
+
+.header .logo {
+  line-height: 1;
+}
+
+.header .logo img {
+  max-height: 36px;
+  margin-right: 8px;
+}
+
+.header .logo h1 {
+  font-size: 32px;
+  margin: 0;
+  font-weight: 700;
+  color: var(--heading-color);
+}
+
+.header .logo span {
+  color: var(--accent-color);
+  font-size: 32px;
+}
+
+.header .btn-getstarted,
+.header .btn-getstarted:focus {
+  color: var(--contrast-color);
+  font-size: 14px;
+  padding: 8px 30px;
+  margin: 0 0 0 30px;
+  border-radius: 4px;
+  transition: 0.3s;
+  border: 2px solid var(--accent-color);
+}
+
+.header .btn-getstarted:hover,
+.header .btn-getstarted:focus:hover {
+  color: var(--default-color);
+  background: var(--accent-color);
+}
+
+@media (max-width: 1200px) {
+  .header .logo {
+    order: 1;
+  }
+
+  .header .btn-getstarted {
+    order: 2;
+    margin: 0 15px 0 0;
+    padding: 6px 15px;
+  }
+
+  .header .navmenu {
+    order: 3;
+  }
+}
+
+.scrolled .header {
+  box-shadow: 0px 0 18px rgba(0, 0, 0, 0.1);
+}
+
+/* Index Page Header
+------------------------------*/
+.index-page .header {
+  --background-color: rgba(0, 0, 0, 0);
+}
+
+/* Index Page Header on Scroll
+------------------------------*/
+.index-page.scrolled .header {
+  --background-color: rgba(0, 0, 0, 0.8);
+}
+
+/*--------------------------------------------------------------
+# Navigation Menu
+--------------------------------------------------------------*/
+/* Navmenu - Desktop */
+@media (min-width: 1200px) {
+  .navmenu {
+    padding: 0;
+  }
+
+  .navmenu ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
+  }
+
+  .navmenu li {
+    position: relative;
+  }
+
+  .navmenu a,
+  .navmenu a:focus {
+    color: #00aced;
+    padding: 18px 15px;
+    font-size: 16px;
+    font-family: #fff;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
+    transition: 0.3s;
+  }
+
+  .navmenu a i,
+  .navmenu a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+    transition: 0.3s;
+  }
+
+  .navmenu li:last-child a {
+    padding-right: 0;
+  }
+
+  .navmenu li:hover>a,
+  .navmenu .active,
+  .navmenu .active:focus {
+    color: #007bb6;
+  }
+
+  .navmenu .dropdown ul {
+    margin: 0;
+    padding: 10px 0;
+    background: var(--nav-dropdown-background-color);
+    display: block;
+    position: absolute;
+    visibility: hidden;
+    left: 14px;
+    top: 130%;
+    opacity: 0;
+    transition: 0.3s;
+    border-radius: 0;
+    z-index: 99;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+  }
+
+  .navmenu .dropdown ul li {
+    min-width: 200px;
+  }
+
+  .navmenu .dropdown ul a {
+    padding: 10px 20px;
+    font-size: 15px;
+    text-transform: none;
+    color: #f4f4f4;
+  }
+
+  .navmenu .dropdown ul a i {
+    font-size: 12px;
+  }
+
+  .navmenu .dropdown ul a:hover,
+  .navmenu .dropdown ul .active:hover,
+  .navmenu .dropdown ul li:hover>a {
+    background-color: #007bb6;
+  }
+
+  .navmenu .dropdown:hover>ul {
+    opacity: 1;
+    top: 100%;
+    visibility: visible;
+  }
+
+  .navmenu .dropdown .dropdown ul {
+    top: 0;
+    left: -90%;
+    visibility: hidden;
+  }
+
+  .navmenu .dropdown .dropdown:hover>ul {
+    opacity: 1;
+    top: 0;
+    left: -100%;
+    visibility: visible;
+  }
+}
+
+/* Navmenu - Mobile */
+@media (max-width: 1199px) {
+  .mobile-nav-toggle {
+    color: var(--nav-color);
+    font-size: 28px;
+    line-height: 0;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: color 0.3s;
+  }
+
+  .navmenu {
+    padding: 0;
+    z-index: 9997;
+  }
+
+  .navmenu ul {
+    display: none;
+    list-style: none;
+    position: absolute;
+    inset: 60px 20px 20px 20px;
+    padding: 10px 0;
+    margin: 0;
+    border-radius: 6px;
+    background-color: var(--nav-mobile-background-color);
+    overflow-y: auto;
+    transition: 0.3s;
+    z-index: 9998;
+    box-shadow: 0px 0px 30px rgba(11, 11, 11, 0.384);
+  }
+
+  .navmenu a,
+  .navmenu a:focus {
+    color: var(--nav-dropdown-color);
+    padding: 10px 20px;
+    font-family: var(--nav-font);
+    font-size: 17px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
+    transition: 0.3s;
+  }
+
+  .navmenu a i,
+  .navmenu a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: 0.3s;
+    background-color: white 90%;
+  }
+
+  .navmenu a i:hover,
+  .navmenu a:focus i:hover {
+    background-color: rgb(52, 89, 213) 90%;
+  }
+
+  .navmenu a:hover,
+  .navmenu .active,
+  .navmenu .active:focus {
+    background-color: #33353d;
+  }
+
+  .navmenu .active i,
+  .navmenu .active:focus i {
+    transform: rotate(180deg);
+  }
+
+  .navmenu .dropdown ul {
+    position: static;
+    display: none;
+    z-index: 99;
+    padding: 10px 0;
+    margin: 10px 20px;
+    background-color: #007bb6;
+    border: 1px solid color-mix( srgb, (25, 121, 218, 0.714), transparent 90%);
+    box-shadow: none;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .navmenu .dropdown ul ul {
+    background-color: rgba(25, 121, 218, 0.714);
+  }
+
+  .navmenu .dropdown>.dropdown-active {
+    display: block;
+    background-color: rgba(25, 121, 218, 0.714);
+  }
+
+  .mobile-nav-active {
+    overflow: hidden;
+  }
+
+  .mobile-nav-active .mobile-nav-toggle {
+    color: #fff;
+    position: absolute;
+    font-size: 32px;
+    top: 15px;
+    right: 15px;
+    margin-right: 0;
+    z-index: 9999;
+  }
+
+  .mobile-nav-active .navmenu {
+    position: fixed;
+    overflow: hidden;
+    inset: 0;
+    background: rgba(33, 37, 41, 0.8);
+    transition: 0.3s;
+  }
+
+  .mobile-nav-active .navmenu>ul {
+    display: block;
+  }
 }
 
 
 /*explanation*/
 .explanation {
-  padding: 80px 0;
+  padding: 150px 0;
   position: relative;
   clip-path: inset(0);
-  margin-top: -2px;
+  margin-top: -80px;
   
 }
 
@@ -83,34 +372,133 @@ font-size: 1.5rem;
     line-height: 30px;
 }
 
-/* Start Features */
-.features .container h2{
+
+/* Section title everywhere */
+.section-title {
+  margin-top: 50px;
+  text-align: center;
+  padding-bottom: 60px;
+  position: relative;
+}
+
+.section-title h2 {
+  font-size: 13px;
+  letter-spacing: 1px;
+  font-weight: 700;
+  padding: 8px 20px;
+  margin: 0;
+  background: color-mix(in srgb, #007bb6, transparent 90%);
+  color: #000;
+  display: inline-block;
+  text-transform: uppercase;
+  border-radius: 50px;
+}
+
+.section-title p {
+  color: #000;
+  margin: 10px 0 0 0;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.section-title p .description-title {
+  color: #007bb6;
+}
+/* */
+
+
+/* Start Service */
+.sc{
+  margin-bottom: 60px;
+}
+
+.services .service-item {
+  background-color: #fff;
+  box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+  padding: 50px 30px;
+  transition: all 0.3s ease-in-out;
+  height: 100%;
+  position: relative;
+  z-index: 1;
+}
+
+.services .service-item:before {
+  content: "";
+  position: absolute;
+  background: #f4f4f4;
+  inset: 100% 0 0 0;
+  transition: all 0.3s;
+  z-index: -1;
+}
+
+.services .service-item .icon {
+  margin-bottom: 10px;
+}
+
+.services .service-item .icon i {
+  color: #f4f4f4;
+  font-size: 36px;
+  transition: ease-in-out 0.3s;
+}
+
+.services .service-item h4 {
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+.services .service-item h4 a {
+  color: #33353d;
+  transition: ease-in-out 0.3s;
+}
+
+.services .service-item p {
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
+  transition: ease-in-out 0.3s;
+}
+
+.services .service-item:hover h4 a,
+.services .service-item:hover .icon i,
+.services .service-item:hover p {
+  color: #f4f4f4;
+}
+
+.services .service-item:hover:before {
+  background: #007bb6;
+  inset: 0;
+  border-radius: 0px;
+}
+/* */
+
+/* .features .container h2{
   margin-top: auto;
 }
 
 .features {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   height: 700px;
 }
 
 .features .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 20px; /* Tambahkan jarak antar elemen */
-}
+  justify-content: space-between; */
+  /* gap: 20px; Tambahkan jarak antar elemen
+} */
 
-.features .feat {
-  flex: 1 1 22.75%; /* Pastikan setiap fitur memiliki lebar yang sama */
+/* .features .feat {
+  flex: 1 1 22.75%; Pastikan setiap fitur memiliki lebar yang sama
   margin-top: 50px;
   padding: 30px 40px;
   background-color: #fff;
   box-shadow: 0 0 15px #ccc;
-  max-width: 300px; /* Batasan maksimal untuk fitur */
+  max-width: 300px; Batasan maksimal untuk fitur
 }
 
 .features .feat i {
-  color: #a2cf8d;
+  color: #387ADF;
 }
 
 .features .feat h3 {
@@ -133,105 +521,120 @@ font-size: 1.5rem;
 .features .feat:hover p,
 .features .feat:nth-of-type(0) p {
   color: #fff;
+} */
+/* End */
+
+
+/* FAQ */
+.faq .faq-container .faq-item {
+  background-color: #ffffff;
+  position: relative;
+  padding: 20px;
+  margin-bottom: 15px;
+  border: 1px solid color-mix(in srgb, var(--default-color), transparent 85%);
+  border-radius: 5px;
+  overflow: hidden;
 }
-/* End Features */
+
+.faq .faq-container .faq-item:last-child {
+  margin-bottom: 0;
+}
+
+.faq .faq-container .faq-item h3 {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  margin: 0 30px 0 0;
+  transition: 0.3s;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.faq .faq-container .faq-item h3 .num {
+  color: #007bb6;
+  padding-right: 5px;
+}
+
+.faq .faq-container .faq-item h3:hover {
+  color: #007bb6;
+}
+
+.faq .faq-container .faq-item .faq-content {
+  display: grid;
+  grid-template-rows: 0fr;
+  transition: 0.3s ease-in-out;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.faq .faq-container .faq-item .faq-content p {
+  margin-bottom: 0;
+  overflow: hidden;
+}
+
+.faq .faq-container .faq-item .faq-toggle {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 16px;
+  line-height: 0;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.faq .faq-container .faq-item .faq-toggle:hover {
+  color: #007bb6;
+}
+
+.faq .faq-container .faq-active {
+  background-color: color-mix(in srgb, var(--accent-color), transparent 97%);
+  border-color: color-mix(in srgb, var(--accent-color), transparent 80%);
+}
+
+.faq .faq-container .faq-active h3 {
+  color: #000;
+}
+
+.faq .faq-container .faq-active .faq-content {
+  grid-template-rows: 1fr;
+  visibility: visible;
+  opacity: 1;
+  padding-top: 10px;
+}
+
+.faq .faq-container .faq-active .faq-toggle {
+  transform: rotate(90deg);
+  color: #007bb6;
+}
+  /* end */
 
 
-/* Daftar Tempat */
+  .btn-secondary {
+      background: #f5efff;
+      color: #7839f3;
+  }
 
 .cm{
   margin-top: 100px;
   display: flex;
 }
+/* */
 
-.btn-secondary {
-    background: #f5efff;
-    color: #7839f3;
+
+.card{
+  margin-bottom: -60px;
 }
 
-.recent-blog-posts .post-item {
-    background: var(--surface-color);
-    box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
-    transition: 0.3s;
-  }
-  
-  .recent-blog-posts .post-item .post-img img {
-    transition: 0.5s;
-  }
-  
-  .recent-blog-posts .post-item .post-date {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    background-color: var(--accent-color);
-    color: var(--contrast-color);
-    text-transform: uppercase;
-    font-size: 13px;
-    padding: 6px 12px;
-    font-weight: 500;
-  }
-  
-  .recent-blog-posts .post-item .post-content {
-    padding: 30px;
-  }
-  
-  .recent-blog-posts .post-item .post-title {
-    color: var(--heading-color);
-    font-size: 20px;
-    font-weight: 700;
-    transition: 0.3s;
-    margin-bottom: 15px;
-  }
-  
-  .recent-blog-posts .post-item .meta i {
-    font-size: 16px;
-    color: var(--accent-color);
-  }
-  
-  .recent-blog-posts .post-item .meta span {
-    font-size: 15px;
-    color: color-mix(in srgb, var(--default-color), transparent 50%);
-  }
-  
-  .recent-blog-posts .post-item hr {
-    color: color-mix(in srgb, var(--default-color), transparent 80%);
-    margin: 20px 0;
-  }
-  
-  .recent-blog-posts .post-item .readmore {
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-    line-height: 1;
-    transition: 0.3s;
-    color: color-mix(in srgb, var(--default-color), transparent 40%);
-  }
-  
-  .recent-blog-posts .post-item .readmore i {
-    line-height: 0;
-    margin-left: 6px;
-    font-size: 16px;
-  }
-  
-  .recent-blog-posts .post-item:hover .post-title,
-  .recent-blog-posts .post-item:hover .readmore {
-    color: var(--accent-color);
-  }
-  
-  .recent-blog-posts .post-item:hover .post-img img {
-    transform: scale(1.1);
-  }
-/* end */
-
-/* */
 .form-label{
   color: #fff;
 }
 
+
 /*Footer */
 .site-footer
 {
-  background-color:#26272b;
+  background-color: #007bb6;
   padding:45px 0 20px;
   font-size:15px;
   line-height:24px;
