--- a/public/css/house.css
+++ b/public/css/house.css
@@ -1,31 +1,88 @@
+/* Daftar Tempat */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
   }
     
-    .slider-homes {
-        display: flex;
-        max-width: 100%;
-        height: auto;
-        overflow-x: hidden;
-    }
-    
-    .swiper-slide {
-        width: 650px;
-        margin-right: 28px;
-    }
-    
-    .box-dream {
-        background-color: #ffffff;
-        border-radius: 10px;
-        overflow: hidden;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-        padding: 15px;
-    }
+  .tf-section {
+    padding: 60px 0;
+    background-color: #f8f8f8;
+}
 
-    .box-dream .image img {
-        width: 100%;
-        height: auto;
-        border-radius: 10px;
-    }
+.heading.section-title h2 {
+    color: #333;
+}
+
+.heading .description-title {
+    color: #ff5a60;
+}
+
+.swiper-container {
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.swiper-slide {
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+.box-dream {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.box-dream .image img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.box-dream .content {
+    padding: 15px;
+    text-align: center;
+}
+
+.box-dream .head {
+    font-weight: 700;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.box-dream .price {
+    font-size: 1.5rem;
+    color: #ff5a60;
+}
+
+.box-dream .location p,
+.box-dream .icon-box .item {
+    font-size: 0.9rem;
+    color: #666;
+}
+
+.icon-box {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+}
+
+.swiper-pagination-bullet {
+    background: #ff5a60;
+    opacity: 0.8;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    color: #ff5a60;
+    padding: 28px;
+    box-shadow: 0px 0 50px 0 rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    border-radius: 50%;
+}
+
