--- a/public/css/detailhouse.css
+++ b/public/css/detailhouse.css
@@ -103,46 +103,54 @@ padding: 20px;
   border-radius: 5px;
   cursor: pointer;
 }
-
+.property-banner{
+  position: relative;
+  background-color: #f4f4f4;
+  padding: 20px;
+}
 .property-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  overflow: hidden;
   gap: 20px;
+  padding: 25px;
 }
 
 .property-card {
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 10px 6px rgba(0, 0, 0, 0.1);
 }
 
-.property-card img {
+.property-card .image img {
   width: 100%;
-  height: 200px;
-  object-fit: cover;
+  height: 100%;
+  border-radius: 10px;
 }
-
-.property-info {
-  padding: 15px;
+  .property-info {
+    text-align: center;
+    font-size: 18px;
+    padding: 15px;
+  }
+.property-info .head{
+  font-weight: 700;
 }
-
+.property-info, .head a{
+  text-align: center;
+  padding: 15px; color: #007bb6;
+}
 .property-info .price {
   text-align: center;
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #ff5a60;
-  margin-bottom: 10px;
+  margin-bottom: 2px;
 }
-
-.property-info h3 {
-  text-align: center;
-  font-size: 18px;
-}
-
 .property-info p {
   display: flex;
   justify-content: space-around;
   font-size: 14px;
-  color: #666;
+  color: #333;
   margin: 15px 0px 20px 0;
-}/* */
+}
+/* */
