--- a/public/css/fronten.css
+++ b/public/css/fronten.css
@@ -682,8 +682,8 @@ section{
   display: none;
   width: 40px;
   height: 40px;
-  background-color: #333;
-  color: white;
+  color: #fff;
+  background-color: #007bb6;
   border-radius: 50%;
   text-align: center;
   font-size: 24px;
